samples/_failures_safe/1761271334_0a0ef3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59853e8c.c: In function ‘main’:
./samples/SAFE/__tmp_59853e8c.c:157:13: error: expected expression at end of input
  157 |             case
      |             ^~~~
./samples/SAFE/__tmp_59853e8c.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59853e8c.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59853e8c.c:157:13: error: expected declaration or statement at end of input
